--- a/paginas/indumentaria.html
+++ b/paginas/indumentaria.html
@@ -37,7 +37,7 @@
                         <li><a class="dropdown-item" href="Calzado.html">Calzado</a></li>
                         <li><a class="dropdown-item" href="../index.html">Inicio</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/Ofertas.html">Ofertas</a></li>
+                        <li><a class="dropdown-item" href="Ofertas.html">Ofertas</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
