--- a/paginas/calzado.html
+++ b/paginas/calzado.html
@@ -61,7 +61,7 @@
                         </p>
                         <a href="">click aqui</a>
                     </div>
-                    <img src="https://dummyimage.com/200x300/000/fff" alt="imagen oferta">
+                    <img src="../imagenes/estasi.jpg" alt="imagen zapatilla">
 
                 </header>
                 <main>
@@ -74,31 +74,31 @@
                         <h3>Ofertas en remeras oversize</h3>
                         <div class="lista-oferta">
                             <div>
-                                <img src="https://dummyimage.com/25x25/000/fff" alt="">
+                                <img src="../imagenes/imagencalzado.jpg" alt="zapato">
                                 <p>Modelo uptempo</p>
                             </div>
                         </div>
 
                         <div>
                             <div>
-                                <img src="https://dummyimage.com/25x25/000/fff" alt="">
+                                <img src="../imagenes/otra100x100.jpg" alt="zapato">
                                 <p>Modelo uptempo</p>
                             </div>
                         </div>
 
                         <div>
                             <div>
-                                <img src="https://dummyimage.com/25x25/000/fff" alt="">
+                                <img src="../imagenes/ultima100x100.jpg" alt="zapato">
                                 <p>Modelo uptempo</p>
                             </div>
                         </div>
                     </section>
 
                     <section class="aside-oferta">
-                        <h4>Lo ultimo de nike</h4>
+                        <h4>Lo ultimo de Nike</h4>
                         <ul>
                             <li>
-                                <img src="https://dummyimage.com/25x25/000/fff" alt="">
+                                <img src="../imagenes/img_20210.jpg" alt="zapas">
                                 <p>Ultimo modelo</p>
                             </li>
                         </ul>
