--- a/paginas/indumentaria.html
+++ b/paginas/indumentaria.html
@@ -62,12 +62,12 @@
          </main>
 
          <div class="contenedor">
-            <div class="item-a">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et vel, tempora laborum alias culpa voluptatum quas aliquid impedit dignissimos aperiam ullam, ea eum iste qui cum provident rem quasi quisquam.</div>
+            <div class="item-a">La mejor calidad en calzado importado</div>
             <div class="item-b">Prendas exclusivas y al mejor precio</div>
-            <div class="item-c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum blanditiis iusto atque accusantium id deserunt a excepturi enim eveniet quae. Dolorem nemo quia placeat perspiciatis iste harum nihil deserunt voluptates?</div>
-            <div class="Item-d">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dolorem placeat et, dolores fugiat pariatur error molestiae harum consequatur aut nemo mollitia non expedita cumque, in eveniet eius. Qui, iusto.</div>
-            <div class="Item-e">Item-e</div>
-            <div class="Item-f">Item-f</div>
+            <div class="item-c">Todos los talles en indumentaria depostiva, la tienda e-commerce con mas variedad</div>
+            <div class="Item-d">Las mejores ofertas que podiras encontrar en una tienda electronica.</div>
+            <div class="Item-e">Buzos</div>
+            <div class="Item-f">Camperas</div>
 
 
 
