--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Title-->
-        <title>Desafio Bootstrap</title>
+        <title>Probando scss</title>
         <!--link bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <!--link css-->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/pruebacss.css">
     </head>
 
     <body>
@@ -52,9 +52,9 @@
                         </form>
                     </div>
                     </div>
-                </nav>
-                <!--contenedor de bootstrap-->
-                <main class="p-1 m-1">
+                     </nav>
+                     <!--contenedor de bootstrap-->
+                     <main class="p-1 m-1">
                     <section class="container">
                         <div class="row">
                             <!--lorem-container-->
